RESOLVED FIXED 248092
[LFC][IFC] Fix css2.1/t0805-c5520-brdr-b-01-e.html
https://bugs.webkit.org/show_bug.cgi?id=248092
Summary [LFC][IFC] Fix css2.1/t0805-c5520-brdr-b-01-e.html
alan
Reported 2022-11-18 10:39:43 PST
ssia
Attachments
Patch (4.03 KB, patch)
2022-11-18 10:49 PST, alan
no flags
alan
Comment 1 2022-11-18 10:49:38 PST
Darin Adler
Comment 2 2022-11-18 13:58:17 PST
Comment on attachment 463607 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=463607&action=review > Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.cpp:199 > + auto listMarkerIsNested = enclosingListItem != associatedListItem; Can these both be null? I notice we are using pointers for both.
alan
Comment 3 2022-11-18 14:11:42 PST
(In reply to Darin Adler from comment #2) > Comment on attachment 463607 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=463607&action=review > > > Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.cpp:199 > > + auto listMarkerIsNested = enclosingListItem != associatedListItem; > > Can these both be null? I notice we are using pointers for both. No, we don't expect neither of them null during layout (that would indicate a detached subtree).
EWS
Comment 4 2022-11-18 15:07:16 PST
Committed 256858@main (7a26f091845d): <https://commits.webkit.org/256858@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 463607 [details].
Radar WebKit Bug Importer
Comment 5 2022-11-18 15:08:18 PST
Note You need to log in before you can comment on or make changes to this bug.