[LFC][IFC] Fix css2.1/t0805-c5520-brdr-b-01-e.html https://bugs.webkit.org/show_bug.cgi?id=248092

Reviewed by Antti Koivisto.

In standards mode, when nested list items end up on the same line (e.g. <ul><li><ul><li>one line),
the marker renderers are all inserted under the inner-most list item.
This patch ensures that we use the correct offset for such nested markers.

* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.cpp:
(WebCore::LayoutIntegration::LineLayout::updateListMarkerDimensions):
* Source/WebCore/rendering/RenderListMarker.cpp:
(WebCore::RenderListMarker::listItem const):
* Source/WebCore/rendering/RenderListMarker.h:

Canonical link: https://commits.webkit.org/256858@main